@@ -1,6 +1,6 @@
 /* This testcase is part of GDB, the GNU debugger.
 
-   Copyright 2010-2012 Free Software Foundation, Inc.
+   Copyright 2012 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -16,23 +16,17 @@
    along with this program.  If not, see  <http://www.gnu.org/licenses/>.
 */
 
-extern void do_nothing (void);
-
-int second(){
-  fork() ;
-  return 12;
+void
+do_nothing (void)
+{
 }
 
-int first(){
+int
+main ()
+{
   int i;
 
   for (i = 0; i < 2; i++)
     do_nothing ();
-
-  return second();
-}
-
-int main (){
-  do_nothing();
-  return first();
+  return 0;
 }
